force-app/main/default/objects/Interview_Review__c/Interview_Review__c.object-meta.xml
<CustomObject>
    <label>面接審査</label>
    <nameField>
        <displayFormat>IR-{0000}</displayFormat>
        <label>面接審査番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>