force-app/main/default/objects/Interview_Review__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <description>申込オブジェクトの応募者の名前</description>
    <formula>Job_Application__r.Applicant__r.Name</formula>
    <inlineHelpText>応募者の名前</inlineHelpText>
    <label>応募者名</label>
    <type>Text</type>
</CustomField>