force-app/main/default/objects/Interview_Review__c/fields/Interviewer_Comment__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Comment__c</fullName>
    <description>面接の面接官のコメント</description>
    <inlineHelpText>面接時に気付いた点についてここに詳細を記載して</inlineHelpText>
    <label>面接官コメント</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>