force-app/main/default/objects/Interview_Review__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>関連する申込の特定に使用する</description>
    <inlineHelpText>この面接審査に関連付けられた申込</inlineHelpText>
    <label>申込</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>面接審査</relationshipLabel>
    <relationshipName>Interview_Reviews2</relationshipName>
    <type>Lookup</type>
</CustomField>