force-app/main/default/objects/Interview_Review__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>申込オブジェクトの募集職種名</description>
    <formula>Job_Application__r.Position__r.Name</formula>
    <inlineHelpText>募集職種名</inlineHelpText>
    <label>募集職種名</label>
    <type>Text</type>
</CustomField>