force-app/main/default/objects/Interview_Review__c/fields/Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Review_Score__c</fullName>
    <description>面接の結果と応募者に付ける採点結果</description>
    <inlineHelpText>：1 から 10 で評価してください。</inlineHelpText>
    <label>審査採点</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>