force-app/main/default/objects/Interview_Review__c/fields/SPI__c.field-meta.xml
<CustomField>
    <fullName>SPI__c</fullName>
    <label>SPI</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>